--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 server.error.include-message=always
 server.error.include-stacktrace=never
+
+spring.profiles.active=${APP_PROFILE:dev}
