--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.error.include-message=always
 server.error.include-stacktrace=never
 
 spring.profiles.active=${APP_PROFILE:dev}
+spring.jpa.hibernate.ddl-auto=update
