--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,4 @@
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
-server.error.include-message=always
-server.error.include-stacktrace=never
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
 spring.datasource.username=admin
 spring.datasource.password=ipom
-spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.ddl-auto=update
